--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "knowledgehut-js-starter",
+  "name": "artify-js-starter",
   "version": "2.0.2",
-  "description": "A starter kit for building web applications by KnowledgeHut upGrad for the JavaScript and FullStack Programs",
+  "description": "A starter kit for building web applications in Javscript",
   "scripts": {
     "dev": "npx vite serve --host",
     "build": "npx vite build --emptyOutDir",
     "preview": "npx vite preview --host"
   },
-  "author": "Sachin Bhatnagar <sachin@knowledgehut.co> (https://www.knowledgehut.com)",
   "license": "AFL-3.0",
   "devDependencies": {
     "msw": "^0.47.4",
