--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "artify-js-starter",
+  "name": "knowledgehut-js-starter",
   "version": "2.0.2",
-  "description": "A starter kit for building web applications in Javscript",
+  "description": "A starter kit for building web applications by KnowledgeHut upGrad for the JavaScript and FullStack Programs",
   "scripts": {
     "dev": "npx vite serve --host",
     "build": "npx vite build --emptyOutDir",
     "preview": "npx vite preview --host"
   },
+  "author": "Sachin Bhatnagar <sachin@knowledgehut.co> (https://www.knowledgehut.com)",
   "license": "AFL-3.0",
   "devDependencies": {
     "msw": "^0.47.4",
@@ -14,5 +15,8 @@
   },
   "msw": {
     "workerDirectory": "src/public"
+  },
+  "dependencies": {
+    "unsplash-js": "^7.0.19"
   }
 }
